@startuml Classes
skinparam style strictuml

class Sala {
    codigo: String
    capacidade: int
    acessibilidade: Boolean
}

class Turma {
    codigo: String
    quantidadeAlunos: int 
    professor: String
    dataInicio: Date
    dataFim: Date
    acessibilidade: Boolean
    ' disicplina '
    ' horario '
}

class Horario {
    diaDaSemana: String
    horarioInicio: Time
    horarioFim: Time
    recorrencia: String
}

class Disciplina {
    codigo: String
    nome: String
}

class Alocacao {
}

class Atividade {
    nome: String
    quantidadeParticipantes: int 
    Data: Date
    ' Horario '
    acessibilidade: Boolean

}

class RequerComputador {
    quantidadeComputadores: int
    sistemaOperacional: String
}

class ComputadorSala {
    quantidadeComputadores: int
    sistemaOperacional: String
    tecnicoResponsavel: String
}

Disciplina "1" -- "*" "Turma"

Horario "1*" --  "1" Turma
Horario "1*" --  "1" Atividade

Alocacao "*" -- "1" Sala: reserva >
Alocacao "0...1" -- "1" Horario

ComputadorSala "0..1" -- "1" Sala
RequerComputador "0..1" -- "1" "Turma"
RequerComputador "0..1" -- "1" "Atividade"
@enduml